<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context=".frag.WeatherFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fragWeatherId"
                android:text="@string/weather_frag_heading"

                android:textSize="32sp"
                android:textStyle="bold"
                android:textAlignment="center"

                android:layout_marginTop="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"/>

        <Spinner
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:id="@+id/spWeather"

                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragWeatherId"
        />


        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/weatherFragSubHeadTV"
                android:text=""

                android:textSize="24sp"
                android:textStyle="italic"
                android:textAlignment="center"

                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spWeather"
                app:layout_constraintHorizontal_bias="0.5"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"

                android:id="@+id/edTxt1"
                android:inputType="numberDecimal"
                android:text="@string/weather_input"

                android:ems="10"
                android:layout_marginTop="20dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weatherFragSubHeadTV"
        />

        <Button
                android:text="@string/weather_btn_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:id="@+id/weatherResultBtn"
                android:layout_marginTop="30dp"

                app:layout_constraintTop_toBottomOf="@+id/edTxt1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
        />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/weatherResultTV"
                android:text="@string/weather_frag_heading"

                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/result_color"
                android:textAlignment="center"

                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"

                app:layout_constraintTop_toBottomOf="@+id/weatherResultBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
